# groove-metronome

./: .gitignore  CLAUDE.md  CODEX_STORE_SUBMIT.md  MOBILE_RELEASE.md  README.md  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle
api/: healthz.ts
docs/: DAW_PLUGIN_PLAN.md  LANDING_PAGE_DESIGN_BRIEF.md
ios/App/App/: AppDelegate.swift  Info.plist  MainViewController.swift
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
ios/App/GrooveWatch Watch App/: GrooveWatchApp.swift  Info.plist  WatchMetronome.swift  WatchMetronomeView.swift
plugin/: CMakeLists.txt  GUIDE.md  README.md
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/installers/: install-mac.command  install-windows.ps1
public/: llms.txt  manifest.webmanifest  privacy.html  robots.txt  sitemap.xml  sw.js
public/metronome-sounds/: README.md
public/metronome-sounds/voices/: RECORDING_SPEC.md
scripts/: check-public-health.mjs  reaper-install-groove-click.lua
src/: App.tsx  index.css  main.tsx
src/components/analyzer/: AudioAnalysisCard.tsx  ImportZone.tsx  MidiAnalysisCard.tsx
src/hooks/: useMetronome.ts  useSubdivisionShortcut.ts
src/lib/: audio-tempo.ts  haptics.ts  ios-audio.ts  metronome-types.ts  midi-analyzer.ts  utils.ts
src/pages/: AnalyzerPage.tsx  LandingPage.tsx  MetronomePage.tsx  SetlistPage.tsx
store/app-store/: metadata.md  release-checklist.md
(+22 files in other folders)
